--- a/P009586.opf/meta.yml
+++ b/P009586.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P009586
+id: P009586
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W8LS17253
   title: བདེ་ཆེན་ཞིང་གི་སྨོན་ལམ་གྱི་འབྱེད་འགྲེལ།
-  volume: ''
   author: ''
+  volumes: {}
