--- a/P009586.opf/meta.yml
+++ b/P009586.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W8LS17253
   title: བདེ་ཆེན་ཞིང་གི་སྨོན་ལམ་གྱི་འབྱེད་འགྲེལ།
   author: ''
-  volumes: {}
+  volumes:
+    d09269e9866e4100a38d8043b1eb2165:
+      image_group_id: I8LS17280
+      title: ''
+      volume_number: 1
+      total_pages: 124
