--- a/P009586.opf/layers/v001/Pagination.yml
+++ b/P009586.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 8644d4dfc1794d80a6fc476f22bc5b63
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   173f9c466c084d508961ae8d89975269:
