--- a/P009586.opf/meta.yml
+++ b/P009586.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P009586
 initial_creation_type: ocr
+created_at: 29/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W8LS17253
   title: བདེ་ཆེན་ཞིང་གི་སྨོན་ལམ་གྱི་འབྱེད་འགྲེལ།
