--- a/P009586.opf/meta.yml
+++ b/P009586.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P009586
 initial_creation_type: ocr
 created_at: 29/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 20:39:25.851441
 source_metadata:
   id: bdr:W8LS17253
   title: བདེ་ཆེན་ཞིང་གི་སྨོན་ལམ་གྱི་འབྱེད་འགྲེལ།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 124
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
